Scroll bar added

--- a/src/main/webapp/META-INF/resources/libraries/acme/css/acme.css
+++ b/src/main/webapp/META-INF/resources/libraries/acme/css/acme.css
@@ -38,6 +38,12 @@ div.dropdown-menu {
 	background-color: #343a40 !important;
 }
 
+.scrollable-menu {
+    height: auto;
+    max-height: 300px;
+    overflow-x: hidden;
+}
+
 a.dropdown-item {
 	color: #fff !important;
 }
